kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-server-hello-world
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-server-hello-world
  template:
    metadata:
      labels:
        app: go-server-hello-world
    spec:
      containers:
      - name: go-server-hello-world
        image: quay.io/ernesgonzalez33/go-server-hello-world:1.1
        ports:
        - containerPort: 8000
        - containerPort: 9000
