kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-server-hello-world
spec:
  selector:
    app: go-server-hello-world
  ports:
    - name: http-8000
      protocol: TCP
      port: 8000
      targetPort: 8000
    - name: https-9000
      protocol: TCP
      port: 9000
      targetPort: 9000
