kube/http-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: go-server-hello-world
  name: http-route
spec:
   host: go-server-hello-world-http-go-app.apps-crc.testing
   port:
     targetPort: http-8000
   to:
     kind: Service
     name: go-server-hello-world
