kube/https-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: go-server-hello-world
  name: https-route
spec:
   host: go-server-hello-world-https-go-app.apps-crc.testing
   port:
     targetPort: https-9000
   to:
     kind: Service
     name: go-server-hello-world
